changed the col constr.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
     <title>Product Preview</title>
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <div class="row">
-          <div class="col-md-3">
-            <img src="/images/image-product-desktop.jpg" alt="product" />
-          </div>
-          <div class="col-md-3">
-            <p class="light-txt">PERFUME</p>
-            <h1>Gabrielle Essence Eau De Parfum</h1>
-            <p class="light-txt">
-              A feminine fragrance, a floral and solar scent.
-            </p>
-            <p class="price">$129.99</p>
-          </div>
-        </div>
-      </div>
+    <div class="left-content top">
+      <img src="/images/image-product-desktop.jpg" alt="product" />
+    </div>
+
+    <div class="right-content">
+      <p class="light-txt">PERFUME</p>
+      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <p class="light-txt">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        Perfumer-Creator for the House of CHANEL.
+      </p>
+      <p class="price">$129.99</p>
+      <button class="btn btn-addtocart">ADD TO CART</button>
     </div>
   </body>
 </html>
