Added images and created the main layout
I added the images for the mobile and the desktop part and created two sides parts for each part of the content. Added the text and the main paragraphs.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,30 @@
     <title>Product Preview</title>
   </head>
   <body>
-    <div class="left-content top">
-      <img src="/images/image-product-desktop.jpg" alt="product" />
-    </div>
+    <div class="container">
+      <div class="left-side">
+        <img
+          src="/images/image-product-desktop.jpg"
+          alt="product"
+          class="desktop-image"
+        />
+        <img
+          src="images/image-product-mobile.jpg"
+          alt="product"
+          class="mobile-image"
+        />
+      </div>
 
-    <div class="right-content">
-      <p class="light-txt">PERFUME</p>
-      <h1>Gabrielle Essence Eau De Parfum</h1>
-      <p class="light-txt">
-        A floral, solar and voluptuous interpretation composed by Olivier Polge,
-        Perfumer-Creator for the House of CHANEL.
-      </p>
-      <p class="price">$129.99</p>
-      <button class="btn btn-addtocart">ADD TO CART</button>
+      <div class="right-side">
+        <p class="light-txt">perfume</p>
+        <h1 class="product-title">Gabrielle Essence Eau de Parfum</h1>
+        <p class="content">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <p class="price">$149.99</p>
+        <button class="btn">Add to cart</button>
+      </div>
     </div>
   </body>
 </html>
