added missing fonts 😂

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
 
     <title>Product Preview</title>
@@ -30,7 +36,9 @@
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
         <p class="price">$149.99</p>
-        <button class="btn">Add to cart</button>
+        <button class="btn">
+          <img src="/images/icon-cart.svg" /> Add to cart
+        </button>
       </div>
     </div>
   </body>
