--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
 
       <div class="right-side">
         <p class="light-txt">perfume</p>
-        <h1 class="product-title">Gabrielle Essence Eau de Parfum</h1>
+        <h1 class="product-title">
+          Gabrielle<br />
+          Essence Eau<br />
+          De Parfum
+        </h1>
         <p class="content">
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
-        <p class="price">$149.99</p>
+        <div class="flex-grp">
+          <p class="price">$149.99</p>
+          <p class="og-price"><s>$169.99</s></p>
+        </div>
         <button class="btn">
           <img src="/images/icon-cart.svg" /> Add to cart
         </button>
