--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,9 +31,7 @@
       <div class="right-side">
         <p class="light-txt">perfume</p>
         <h1 class="product-title">
-          Gabrielle<br />
-          Essence Eau<br />
-          De Parfum
+          Gabrielle <br />Essence Eau<br />De Parfum
         </h1>
         <p class="content">
           A floral, solar and voluptuous interpretation composed by Olivier
