--- a/index.html
+++ b/index.html
@@ -46,5 +46,26 @@
         </button>
       </div>
     </div>
+
+    <span class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noreferrer"
+      >
+        <span class="credits"> Frontend Mentor </span>
+      </a>
+    </span>
+    <br />
+    <span class="attribution-me">
+      <a
+        href="https://www.linkedin.com/in/eerkekoglou/"
+        target="_blank"
+        rel="noreferrer"
+      >
+        Coded by <span class="me"> Elisabeth Erkekoglou 👩‍💻</span>
+      </a>
+    </span>
   </body>
 </html>
