--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p class="og-price"><s>$169.99</s></p>
         </div>
         <button class="btn">
-          <img src="/images/icon-cart.svg" /> Add to cart
+          <img src="/images/icon-cart.svg" alt="cart-icon" /> Add to cart
         </button>
       </div>
     </div>
