--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
       <div class="right-side">
         <p class="light-txt">perfume</p>
-        <h1 class="product-title">
-          Gabrielle <br />Essence Eau<br />De Parfum
-        </h1>
+        <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
         <p class="content">
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
